<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.tristan.tristanhoobroeckx_pset6.MainActivity">

   <!--Sign Up-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signuptext"
            android:text="@string/signupstring"
            android:textSize="@dimen/signtextsize"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin1"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signemailinput"
            android:inputType="textEmailAddress"
            android:hint="@string/emailstring"
            android:digits="@string/digits"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signpasswordinput"
            android:inputType="textPassword"
            android:hint="@string/passwordstring"
            android:digits="@string/digits"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/displaynamesignup"
            android:hint="@string/displaynamestring"
            android:digits="@string/digits2"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_sign_up"
            android:text="@string/signupstring"
            android:layout_gravity="center"
            android:onClick="signUp"/>
    </LinearLayout>

    <!--Divider-->
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <!--Log In-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logintext"
            android:text="@string/loginstring"
            android:textSize="@dimen/signtextsize"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin1"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logemailinput"
            android:inputType="textEmailAddress"
            android:hint="@string/emailstring"
            android:digits="@string/digits"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logpasswordinput"
            android:inputType="textPassword"
            android:hint="@string/passwordstring"
            android:digits="@string/digits"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/displaynamelogin"
            android:hint="@string/displaynamestring"
            android:digits="@string/digits2"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin2"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_log_in"
            android:text="@string/loginstring"
            android:layout_gravity="center"
            android:onClick="logIn"/>
    </LinearLayout>

</LinearLayout>
