<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tristan.tristanhoobroeckx_pset6.TeamActivity">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_weight="0">-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/namefield"-->
            <!--android:hint="@string/displaynamestring"-->
            <!--android:digits="@string/digits"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bluebutton"
            android:background="@drawable/custom_button_blue"
            android:text="@string/blueteam"
            android:textSize="@dimen/teamtextsize"
            android:onClick="BeBlue"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/redbutton"
            android:background="@drawable/custom_buttom_red"
            android:text="@string/redteam"
            android:textSize="@dimen/teamtextsize"
            android:onClick="BeRed"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logoutbutton"
            android:text="@string/logout"
            android:textSize="@dimen/teamtextsize"
            android:onClick="Logout"
            />

    </LinearLayout>

</LinearLayout>
